--- a/producer-app/pom.xml
+++ b/producer-app/pom.xml
@@ -52,7 +52,25 @@
             <groupId>io.awspring.cloud</groupId>
             <artifactId>spring-cloud-aws-starter-sqs</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.awspring.cloud</groupId>
+            <artifactId>spring-cloud-aws-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>localstack</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- END of AWS -->
+
+        <!-- Contract testing -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-contract-verifier</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- END of Contract testing -->
     </dependencies>
 
     <build>
@@ -169,6 +187,32 @@
                 </configuration>
             </plugin>
             <!-- END Test configuration -->
+
+            <!-- Contract testing -->
+            <plugin>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-contract-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <nameSuffixForTests>IT</nameSuffixForTests>
+                    <basePackageForTests>dev.codesoapbox.producerapp</basePackageForTests>
+                    <baseClassMappings>
+                        <baseClassMapping>
+                            <contractPackageRegex>.*http.*</contractPackageRegex>
+                            <baseClassFQN>
+                                dev.codesoapbox.producerapp.testing.http.HttpContractTestBaseClass
+                            </baseClassFQN>
+                        </baseClassMapping>
+                        <baseClassMapping>
+                            <contractPackageRegex>.*sqs.*</contractPackageRegex>
+                            <baseClassFQN>
+                                dev.codesoapbox.producerapp.testing.sqs.SqsQueueContractTestBaseClass
+                            </baseClassFQN>
+                        </baseClassMapping>
+                    </baseClassMappings>
+                </configuration>
+            </plugin>
+            <!-- END Contract testing -->
         </plugins>
     </build>
 </project>
